[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/gui/quests-icons/WarrentNoEdit.png" type="Texture" id=1]
[ext_resource path="res://scenes/warranty.gd" type="Script" id=2]

[sub_resource type="Shader" id=3]

code = "shader_type canvas_item;

uniform bool highlighted = false;

void fragment() 
{
	COLOR = texture(TEXTURE,UV);
	if (highlighted) 
	{
		COLOR.rgb = texture(TEXTURE,UV).rgb * 0.5;
	}
}"

[sub_resource type="ShaderMaterial" id=2]

resource_local_to_scene = true
render_priority = 0
shader = SubResource( 3 )
shader_param/highlighted = false
_sections_unfolded = [ "Resource", "shader_param" ]

[node name="warranty" type="TextureButton"]

material = SubResource( 2 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_scale = Vector2( 0.3, 0.3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 1 )
texture_disabled = ExtResource( 1 )
texture_focused = ExtResource( 1 )
script = ExtResource( 2 )
_sections_unfolded = [ "Material", "Rect", "Textures", "Transform", "Visibility" ]

[connection signal="mouse_entered" from="." to="." method="_on_warranty_mouse_entered"]

[connection signal="mouse_exited" from="." to="." method="_on_warranty_mouse_exited"]

[connection signal="pressed" from="." to="." method="_on_warranty_pressed"]


